services/windmill/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windmill
  namespace: windmill
spec:
  type: ClusterIP
  selector:
    app: windmill
  ports:
    - name: http
      port: 80
      targetPort: 8000
