services/windmill/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windmill
  namespace: windmill
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth-with-cookies@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: windmill.krockysphere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: windmill
                port:
                  number: 80
  tls:
    - hosts:
        - windmill.krockysphere.com
      secretName: windmill-tls
